force-app/main/default/src/objects/PJN_AE_Drug_History__c/PJN_AE_Drug_History__c.object-meta.xml
<CustomObject>
    <label>AE Drug History</label>
    <nameField>
        <displayFormat>AE-DH-{00000000}</displayFormat>
        <label>AE Drug History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Drug History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>