force-app/main/default/src/objects/PJN_AE_Drug_History__c/fields/PJN_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_End_Date__c</fullName>
    <description>E2B (R2): B.1.8d, patientdrugenddateformat (3N) --&gt; Value should be 102 AND B.1.8e, patientdrugenddate (8N) --&gt; convert to CCYYMMDD
E2B (R2): B.1.10.8d, parentdrugenddateformat (3N) --&gt; Value should be 102 AND B.1.10.8e, parentdrugenddate (8N) --&gt; convert to CCYYMMDD

E2B (R3): D.8.r.5 End Date
E2B (R3): D.10.8.r.5 End Date
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
See Appendix II for further information. nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>