force-app/main/default/src/objects/PJN_AE_Drug_History__c/fields/PJN_Indication__c.field-meta.xml
<CustomField>
    <fullName>PJN_Indication__c</fullName>
    <description>E2B (R2): B.1.8f.2, patientdrugindication (250AN)
E2B (R2): B.1.10.8f.2, parentdrugindication (250AN)

E2B (R3): D.8.r.6b Indication (MedDRA code)
E2B (R3): D.10.8.r.6b Indication (MedDRA code)
Conformance: Optional, but required if D.10.8.r.6a is populated.
Data Type: 8N
OID: 2.16.840.1.113883.6.163
Value Allowed: Numeric</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If applicable, MedDRA terms should be used in the indication.</inlineHelpText>
    <label>Indication</label>
    <length>8</length>
    <type>Text</type>
</CustomField>