force-app/main/default/src/objects/PJN_AE_Drug_History__c/fields/PJN_MedDRA_Version_for_Indication__c.field-meta.xml
<CustomField>
    <fullName>PJN_MedDRA_Version_for_Indication__c</fullName>
    <description>E2B (R2): B.1.8f.1, patientindicationmeddraversion (8AN)
E2B (R2): B.1.10.8f.1, parentdrgindicationmeddraversion  (8AN)

E2B (R3): D.8.r.6a MedDRA Version for Indication
E2B (R3): D.10.8.r.6a MedDRA Version for Indication
Conformance: Optional, but required if D.10.8.r.6b is populated.
Data Type: 4AN
OID: None
Value Allowed: Numeric and ‘. ‘(dot)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If applicable, MedDRA terms should be used in the indication.</inlineHelpText>
    <label>MedDRA Version for Indication</label>
    <length>4</length>
    <type>Text</type>
</CustomField>