force-app/main/default/src/objects/PJN_AE_Drug_History__c/fields/PJN_MedDRA_Version_for_Reaction__c.field-meta.xml
<CustomField>
    <fullName>PJN_MedDRA_Version_for_Reaction__c</fullName>
    <description>E2B (R2): B.1.8g.1, patientdrgreactionmeddraversion (8AN)
E2B (R2): B.1.10.8g.1, parentdrgreactionmeddraversion  (8AN)

E2B (R3): D.8.r.7a MedDRA Version for Reaction
E2B (R3): D.10.8.r.7a MedDRA Version for Reaction
Conformance: Optional, but required if D.10.8.r.7b is populated.
Data Type: 4AN
OID: None
Value Allowed: Numeric and ‘. ‘(dot)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If applicable, MedDRA terms should be used in the reaction.</inlineHelpText>
    <label>MedDRA Version for Reaction</label>
    <length>4</length>
    <type>Text</type>
</CustomField>