force-app/main/default/src/objects/PJN_AE_Drug_History__c/fields/PJN_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Start_Date__c</fullName>
    <description>E2B (R2): B.1.8b, patientdrugstartdateformat (3N) --&gt; Value should be 102 AND B.1.8c, patientdrugstartdate (8N) --&gt; convert to CCYYMMDD
E2B (R2): B.1.10.8b, parentdrugstartdateformat (3N) --&gt; Value should be 102 AND B.1.10.8c, parentdrugstartdate (8N) --&gt; convert to CCYYMMDD

E2B (R3): D.8.r.4 Start Date
E2B (R3): D.10.8.r.4 Start Date
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
See Appendix II for further information. nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>