force-app/main/default/src/objects/PJN_AE_Drug_History__c/recordTypes/PJN_AE_Drug_History.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Drug_History</fullName>
    <active>true</active>
    <label>AE Drug History</label>
</RecordType>