force-app/main/default/src/objects/PJN_AE_Drug_History__c/validationRules/PJN_Cannot_Edit_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Cannot_Edit_When_Closed</fullName>
    <active>true</active>
    <description>Cannot edit when the related AE is closed</description>
    <errorConditionFormula>PJN_AE_Closed__c &amp;&amp; PRIORVALUE(PJN_AE_Closed__c)</errorConditionFormula>
    <errorMessage>Cannot edit closed Adverse Event Drug History records</errorMessage>
</ValidationRule>